--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
-	url = git@github.com:dillonzq/LoveIt.git
+	url = git@github.com:abaschen/hugo-theme-blog.git
